# churn

./: README.md  pyproject.toml  training.ipynb
