[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["Viveca Lindahl <vivecalindahl@gmail.com>"]
readme = "README.md"
# Just use for dependency management
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
joblib = "^1.4.2"
scikit-learn = "^1.6.0"
numpy = "^2.2.1"
jupyterlab = "^4.3.4"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
plotly = "^5.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
